[project]
name = "bf-mmlu-pro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ai21>=3.0.2",
    "anthropic>=0.34.2",
    "benchflow>=0.1.7",
    "datasets>=2.19.1",
    "google-generativeai>=0.8.2",
    "openai>=1.30.1",
    "tqdm>=4.66.4",
    "transformers>=4.40.2",
]
